@@ -13,6 +13,7 @@ struct dbg_sym_entry {
 
     unsigned long strtab_fileaddr;
 
+
     struct sym {
         unsigned int strtabidx;
 
@@ -20,6 +21,9 @@ struct dbg_sym_entry {
         unsigned long symaddr_start;
         // XXX instead of this, maybe unsigned int length to save space?
         unsigned long symaddr_end;
+
+        unsigned long stroff_fileaddr;
+        char dsc_use_stroff;
     } **syms;
 
     char from_dsc;
